--- a/Delta_Airline/Extent-Report/ExtentReport.html
+++ b/Delta_Airline/Extent-Report/ExtentReport.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-06-06 23:26:52</span>
+					<span class='suite-started-time'>2020-06-12 16:30:04</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 30s+921ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 22s+365ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 30s+921ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 22s+365ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-06-06 23:26:21</span> 
+							<span class='panel-lead suite-started-time'>2020-06-12 16:29:41</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-06-06 23:26:52</span> 
+							<span class='panel-lead suite-ended-time'>2020-06-12 16:30:04</span> 
 						</div> 
 					</div>
 				</div>
@@ -273,17 +273,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='20a6f168-6638-4c5d-8168-f025aa7ad7d3'>
+										<li class='collection-item test displayed active pass ' extentid='b62089a2-3d07-45bd-8b5e-db80dc9281d3'>
 											<div class='test-head'>
-												<span class='test-name'>testCheckFlightStatus </span>
+												<span class='test-name'>testGetTextFromWebElements </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide  delta_airlinehometest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-06 23:26:25</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-06 23:26:26</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+45ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-12 16:29:45</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-12 16:29:56</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 10s+694ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -303,7 +303,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>23:26:26</td>
+																	<td class='timestamp'>16:29:56</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -313,17 +313,17 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='b97ec9dd-b22e-4731-97da-d24e85ecbdcc'>
+										<li class='collection-item test displayed active pass ' extentid='fa1c4c5a-2766-4974-a126-9d1cdb77eb2d'>
 											<div class='test-head'>
-												<span class='test-name'>testCheckNotifications </span>
+												<span class='test-name'>testuseMouseHover </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide  delta_airlinehometest'></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-06 23:26:36</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-06 23:26:38</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+879ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-12 16:29:59</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-12 16:30:04</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 4s+977ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -343,87 +343,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>23:26:38</td>
-																	<td class='step-details'>Test Passed</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='d8b0011c-1878-422f-959b-c9db9561059b'>
-											<div class='test-head'>
-												<span class='test-name'>testDeltaCarriersSearchPage </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  delta_airlinehometest'></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-06 23:26:46</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-06 23:26:49</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 3s+62ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-														<div class='categories'>
-																<span class='category text-white'>Delta_AirlineHomeTest</span>
-														</div>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>23:26:49</td>
-																	<td class='step-details'>Test Passed</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='7b03674a-16d9-4288-9b70-4023c3da095c'>
-											<div class='test-head'>
-												<span class='test-name'>testSearchButton </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  delta_airlinehometest'></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-06-06 23:26:51</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-06-06 23:26:52</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+980ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-														<div class='categories'>
-																<span class='category text-white'>Delta_AirlineHomeTest</span>
-														</div>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>23:26:52</td>
+																	<td class='timestamp'>16:30:04</td>
 																	<td class='step-details'>Test Passed</td>
 																</tr>
 														</tbody>
@@ -485,12 +405,12 @@
 													<span class='category-name'>Delta_AirlineHomeTest</span>
 												</div>
 												<div class='category-status-counts'>
-														<span class='pass label dot'>Pass: 4</span>
+														<span class='pass label dot'>Pass: 2</span>
 												</div>
 												<div class='cat-body'>
 													<div class='category-status-counts'>
 														<div class='button-group'>
-															<a href='#!' class='pass label filter'>Pass <span class='icon'>4</span></a>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>2</span></a>
 															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
 															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
 														</div>
@@ -506,23 +426,13 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2020-06-06 23:26:25</td>
-																		<td><span class='category-link linked' extentid='20a6f168-6638-4c5d-8168-f025aa7ad7d3'>testCheckFlightStatus</span></td>
+																		<td>2020-06-12 16:29:45</td>
+																		<td><span class='category-link linked' extentid='b62089a2-3d07-45bd-8b5e-db80dc9281d3'>testGetTextFromWebElements</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 																	<tr class='pass'>
-																		<td>2020-06-06 23:26:36</td>
-																		<td><span class='category-link linked' extentid='b97ec9dd-b22e-4731-97da-d24e85ecbdcc'>testCheckNotifications</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2020-06-06 23:26:46</td>
-																		<td><span class='category-link linked' extentid='d8b0011c-1878-422f-959b-c9db9561059b'>testDeltaCarriersSearchPage</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2020-06-06 23:26:51</td>
-																		<td><span class='category-link linked' extentid='7b03674a-16d9-4288-9b70-4023c3da095c'>testSearchButton</span></td>
+																		<td>2020-06-12 16:29:59</td>
+																		<td><span class='category-link linked' extentid='fa1c4c5a-2766-4974-a126-9d1cdb77eb2d'>testuseMouseHover</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
